--- a/NovoStandNSpeedWay/Web/Views/Usuarios/Index.cshtml
+++ b/NovoStandNSpeedWay/Web/Views/Usuarios/Index.cshtml
@@ -51,6 +51,8 @@
                         <input class="form-control" id="UsuarioIdInt" name="UsuarioIdInt" placeholder="Id" readonly />
                     </div>
 
+
+
                     <div class="col-sm-12 text-center" id="DivIsActive">
                         <input hidden type="text" id="IsActive" name="IsActive" value="true" />
                         <label for="ActivoBit">
@@ -67,34 +69,15 @@
                         </label>
                     </div>
 
-
+                
                     <div class="form-row">
-                        <div class="col-lg-12 col-md-12 col-sm-6 col-xs-12 mt-3">
-                            <label for="NombreVar">Nombre</label>
-                            <input type="text" class="form-control" id="NombreVar" name="NombreVar" placeholder="Nombre" required maxlength="100" />
+                       <div class="col-lg-12 col-md-12 col-sm-6 col-xs-12 mt-3">
+                          <label>Rol</label>
+                              <select class="form-control" id="RolIdInt" name="RolIdInt" required></select>
                         </div>
                     </div>
 
-                    <div class="form-row">
-                        <div class="col-lg-12 col-md-12 col-sm-6 col-xs-12 mt-3">
-                            <label>Email</label>
-                            <input type="email" class="form-control" id="UsuarioVar" name="UsuarioVar" placeholder="Correo Electrónico" required maxlength="100" />
-                        </div>
-                    </div>
-
-                    <div class="form-row">
-                        <div class="col-lg-12 col-md-12 col-sm-6 col-xs-12 mt-3">
-                            <label>Contraseña</label>
-                            <input type="password" class="form-control" id="Password" name="Password" placeholder="Contraseña" required maxlength="50" />
-                        </div>
-                    </div>
-
-                    <div class="form-row">
-                        <div class="col-lg-12 col-md-12 col-sm-6 col-xs-12 mt-3">
-                            <label>Rol</label>
-                            <select class="form-control" id="RolIdInt" name="RolIdInt"></select>
-                        </div>
-                    </div>
+                
 
 
                 </div>
