CHANGES TODO MÁS GENERAL

--- a/NovoStandNSpeedWay/Web/Views/Login/Index.cshtml
+++ b/NovoStandNSpeedWay/Web/Views/Login/Index.cshtml
@@ -25,7 +25,7 @@
 
             <div class="form-group col-sm-12">
                 <label>Email</label>
-                <input class="form-control" id="UsuarioVar" type="email" name="UsuarioVar" required placeholder="Correo Eléctronico">
+                <input class="form-control" id="UsuarioVar" type="email" name="UsuarioVar" required placeholder="Correo Electrónico">
             </div>
 
             <div class="form-group col-sm-12">
@@ -38,7 +38,7 @@
             </div>
 
 
-            <a href="/Registrarse/OlvideContraseña" class="pl-3" style="width:100%;">Olvidé Mi Contaseña</a>
+            <a href="/Registrarse/OlvideContraseña" class="pl-3" style="width:100%;">Olvidé Mi Contraseña</a>
 
 
             <div class="form-group col-sm-12 d-flex justify-content-center">
