--- a/NovoStandNSpeedWay/Web/Views/Registrarse/ActualizarContraseña.cshtml
+++ b/NovoStandNSpeedWay/Web/Views/Registrarse/ActualizarContraseña.cshtml
@@ -15,18 +15,18 @@
         <div class="row pt-2 pb-2" style="border:2px lightgray solid; border-radius:5px;">
 
             <div class="form-group col-sm-12">
-                <label>Contraseña</label>
-                <input class="form-control" id="Password" type="password" name="Password" required placeholder="Contraseña">
+                <label>Ingresa Tu Nueva Contraseña</label>
+                <input class="form-control" id="Password" type="password" name="Password" required placeholder="Ingresa Tu Nueva Contraseña">
             </div>
 
             <div class="form-group col-sm-12">
-                <label>Confirmar Contraseña</label>
-                <input class="form-control" id="ConfirmPassword" type="password" name="ConfirmPassword" required placeholder="Confirmar Contraseña">
+                <label>Confirma Tu Nueva Contraseña</label>
+                <input class="form-control" id="ConfirmPassword" type="password" name="ConfirmPassword" required placeholder="Confirma Tu Nueva Contraseña">
             </div>
 
-            @using Web.Controllers;
-            @{ HomeController hc = new HomeController();
-                var email = System.Web.HttpContext.Current.Request.Cookies[hc.CockieName].Value.ToString();
+            @using Web.Helpers;
+            @{ var g = new Generals();
+                var email = g.GetCookieValue(g.CockieName);
              }
 
             <div class="form-group col-sm-12">
